--- a/mtn-graph/pom.xml
+++ b/mtn-graph/pom.xml
@@ -4,12 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>mayton.lib.graph</groupId>
+  <groupId>mayton.libs.graph</groupId>
   <artifactId>mtn-graph</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.2</version>
 
   <name>mtn-graph</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
