--- a/mtn-graph/pom.xml
+++ b/mtn-graph/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>mayton.libs</groupId>
   <artifactId>mtn-graph</artifactId>
-  <version>5.0.0</version>
+  <version>5.0.1</version>
 
   <name>mtn-graph</name>
   <url>http://www.example.com</url>
@@ -57,11 +57,12 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
