--- a/mtn-graph/pom.xml
+++ b/mtn-graph/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>mayton.libs</groupId>
   <artifactId>mtn-graph</artifactId>
-  <version>5.0.1</version>
+  <version>5.0.2</version>
 
   <name>mtn-graph</name>
   <url>http://www.example.com</url>
@@ -57,11 +57,35 @@
     </dependency>
 
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!--                  Testing                 -->
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.pholser</groupId>
+      <artifactId>junit-quickcheck-generators</artifactId>
+      <version>0.9.5</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.jqwik</groupId>
+      <artifactId>jqwik</artifactId>
+      <version>1.3.6</version>
+      <scope>test</scope>
+    </dependency>
+
+
 
   </dependencies>
 
