--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>mayton.libs</groupId>
       <artifactId>encoders</artifactId>
-      <version>1.3</version>
+      <version>[2.2,)</version>
     </dependency>
 
     <dependency>
